fix QA section marker display on safari

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -83,6 +83,7 @@ body {
   scroll-behavior: smooth;
 }
 
+summary::-webkit-details-marker { display: none }
 
 a {
   color: inherit;
